resource-manifests/deployment-sa-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-frontend
  labels:
    app: sa-frontend
    deployment: blue
spec:
  selector:
    matchLabels:
      app: sa-frontend
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-frontend
    spec:
      containers:
        - image: swinkstom/sentiment-analysis-frontend:0365431
          imagePullPolicy: Always
          name: sa-frontend
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerconfigjson-github-com
