resource-manifests/deployment-sa-webap-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-web-app-go
  labels:
    app: sa-web-app-go
spec:
  selector:
    matchLabels:
      app: sa-web-app-go
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-web-app-go
    spec:
      containers:
        - image: swinkstom/sentiment-analysis-webapp-go:be6f93d
          imagePullPolicy: Always
          name: sa-web-app-go
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: dockerconfigjson-github-com
#https://stackoverflow.com/questions/61912589/how-can-i-use-github-packages-docker-registry-in-kubernetes-dockerconfigjson
