resource-manifests/deployment-sa-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-web-app
  labels:
    app: sa-web-app
spec:
  selector:
    matchLabels:
      app: sa-web-app
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
      - image: docker.pkg.github.com/tom-gray/k8s/sentiment-analysis-webapp:latest
        imagePullPolicy: Always
        name: sa-web-app
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: dockerconfigjson-github-com


#https://stackoverflow.com/questions/61912589/how-can-i-use-github-packages-docker-registry-in-kubernetes-dockerconfigjson
