resource-manifests/service-sa-frontend-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend-lb
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: sa-frontend
    version: v1.0.7
