resource-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1  ## if you're on kube 1.19 plus this is no longer beta
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  rules:
  - host: api.sa.info
    http:
      paths:
      - path: /sentiment
        pathType: Prefix
        backend:
          serviceName: sa-web-app-lb
          servicePort: 80
      - path: /testHealth
        pathType: Prefix
        backend:
          serviceName: sa-web-app-lb
          servicePort: 8080
  - host: sa.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: sa-frontend-lb
          servicePort: 80
